# fast

./: # 使用python -m运行.py  README.md
fastfind/: =  fix_report.json  mypy.ini  pyproject.toml  run_tests.py  setup_tests.ps1  test_plan.json  test_plan.py  test_report.json
fastfind/src/fastfind/: __init__.py  cache.py  cli.py  filters.py  formatters.py  report.py  scanner.py  utils.py
fastfind/src/fastfind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fastfind/tests/: conftest.py  test_basic.py  test_integration.py
fastfind/tests/integration/: test_cli_basic.py  test_performance_basic.py  test_performance_simple.py
fastfind/tests/unit/: test_additional.py  test_basic.py  test_simple.py
