[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastfind"
version = "0.1.0"
description = "A modern, fast file finder written in Python"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "click>=8.0",
    "aiofiles>=0.8",
    "rich>=12.0",
    "python-dateutil>=2.8",
]

[project.scripts]
ffind = "fastfind.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}
